@@ -15,6 +15,8 @@ Maintenance
   See https://discourse.orthanc-server.org/t/ignore-dimse-status-0x0111-when-sending-partial-duplicate-studies/4555/3
 * Removed potential PHI from the logs when Orthanc encounters an error while
   creating a zip file.
+* Monitoring of stable resources now also takes into consideration the
+  resource type, not only the resource identifier identifier.
 
 Bug Fixes
 ---------
